variables.Variables.scala.error
Compilation error:
Variables:12: error: not found: value DropBaggle
DropBaggle 
^